--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,8 +27,10 @@ jobs:
     - name: Build the Docker image
       run:  |
         docker build -t kirotodo/docker-graphql:0.0.2 .
+        docker push kirotodo/docker-graphql:latest
     - name: Push the Docker image
       run:  |
         docker push kirotodo/docker-graphql:0.0.2
+        docker push kirotodo/docker-graphql:latest
 #    - name: Build the Docker image
 #      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
