--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,18 +30,18 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER}}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD}}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
       run:  |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "New version: $NEW_VERSION!!!!! "
         
-#     - name: Build the Docker image
-#       run:  |
-#         docker build -t kirotodo/docker-graphql:0.0.2 .
-#         docker build -t kirotodo/docker-graphql:latest .
-#     - name: Push the Docker image
-#       run:  |
-#         docker push kirotodo/docker-graphql:0.0.2
-#         docker push kirotodo/docker-graphql:latest
-#    - name: Build the Docker image
-#      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Build the Docker image
+      env:
+         NEW_VERSION: ${{ steps.version.outputs.version }}
+      run:  |
+        docker build -t kirotodo/docker-graphql:$NEW_VERSION .
+        docker build -t kirotodo/docker-graphql:latest .
+    - name: Push the Docker image
+      env:
+         NEW_VERSION: ${{ steps.version.outputs.version }}
+      run:  |
+        docker push kirotodo/docker-graphql:$NEW_VERSION
+        docker push kirotodo/docker-graphql:latest
